# Learn_OCR

./: .gitignore  main.py  readme.md  requirement.txt  requirements.txt
QR/: Training_layoutLMV3.json  label.txt  main.py
src/: CMakeLists.txt  PerspectiveCorrection.py  __init__.py  canny.py  data.yaml  harris.cpp  harris.hpp  intersection.py  main.cpp  main.py  main2.py
